RESOLVED FIXED153753
[Win] WTFHeaderDetection.h no longer needed
https://bugs.webkit.org/show_bug.cgi?id=153753
Summary [Win] WTFHeaderDetection.h no longer needed
Alex Christensen
Reported 2016-02-01 10:50:01 PST
[Win] WTFHeaderDetection.h no longer needed
Attachments
Patch (3.05 KB, patch)
2016-02-01 10:51 PST, Alex Christensen
no flags
Patch (3.41 KB, patch)
2016-02-01 11:01 PST, Alex Christensen
darin: review+
Alex Christensen
Comment 1 2016-02-01 10:51:05 PST
Alex Christensen
Comment 2 2016-02-01 11:01:29 PST
Alex Christensen
Comment 3 2016-02-01 11:06:00 PST
Note You need to log in before you can comment on or make changes to this bug.