[Win] WTFHeaderDetection.h no longer needed https://bugs.webkit.org/show_bug.cgi?id=153753 rdar://problem/24434627

Reviewed by Darin Adler.

.:

* Source/cmake/WebKitFS.cmake:

Source/WTF:

* wtf/Platform.h:
* wtf/PlatformWin.cmake:



Canonical link: https://commits.webkit.org/171835@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195968 268f45cc-cd09-0410-ab3c-d52691b4dbfc